frontend/test/should_pass/exec_011.grg
using deep_model_001;

rule r1(a:A, b:B, acc:Acc) {
  n:Node;
  ab:AB;
  modify{
    exec(r1(a,b,a));
    exec(r1(a,b,acc));
    exec(r1(ab,ab,n));
    exec(r1(n,n,a));
  }
}

